Add release date to Movies response
